Fix spacing in search matches for query with no spaces
Screenshot: https://imgur.com/a/JPRUKYA

Bug:none
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6198219
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/ui/legacy/components/quick_open/filteredListWidget.css
+++ b/front_end/ui/legacy/components/quick_open/filteredListWidget.css
@@ -140,7 +140,7 @@ devtools-text-prompt {
 }
 
 .filtered-list-widget-item.one-row .filtered-list-widget-title {
-  display: flex;
+  display: inline;
 }
 
 .filtered-list-widget-item.two-rows {
